styles/aboutUs.scss
@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");

.about-title {
  background: url("/assets/about_title_bg.png") no-repeat;
  background-size: 100%;
  width: 100%;
  height: 340px;
  z-index: 99;
  position: absolute;
}

.about-title-text-container {
  display: flex;
  justify-content: center;
  text-align: center;
  padding-top: 5%;
  width: 20%;
}

.about-title-text-container .about-title-text {
  color: #fff;
  font-weight: 500;
  letter-spacing: 2px;
}
.about-title-text-container .about-body-text {
  width: 60%;
}

.about-body-container {
  padding: 20% 15rem 7rem 15rem;
  text-align: justify;
}

.border-gradient {
  border-radius: 5px;
}

.border-gradient.horizontal {
  background: rgb(240, 86, 56);
  background: linear-gradient(
    90deg,
    rgba(240, 86, 56, 1) 0%,
    rgba(255, 191, 100, 1) 49%,
    rgba(240, 86, 56, 1) 100%
  );
  width: 100%;
  height: 2px;
}

.border-gradient.horizontal.small {
  display: none;
}

.border-gradient.vertical {
  background: rgb(255, 191, 100);
  background: linear-gradient(
    180deg,
    rgba(255, 191, 100, 1) 0%,
    rgba(240, 86, 56, 1) 56%,
    rgba(240, 86, 56, 1) 98%
  );
  width: 2px;
  height: 30rem;
}

.about-mision,
.about-vision {
  max-width: 10rem;
}

.about-values-img {
  margin-top: 3rem;
  max-width: 100%;
}
.about-values-img.small {
  display: none;
}

@media screen and (min-width: 2200px) {
  .about-title {
    height: 450px;
  }
}

@media screen and (min-width: 2700px) {
  .about-title {
    height: 520px;
  }
  .about-title-text-container {
    padding-top: 150px;
  }
}

@media screen and (min-width: 2900px) {
  .about-title {
    background: url("/assets/about_big_title_bg.png") no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 280px;
  }
  .about-title-text-container {
    padding-top: 100px;
  }
}

@media screen and (max-width: 1600px) {
  // .about-title-text-container {
  //   // height: 570px;
  //   padding: 100px 10rem;
  // }
  .about-title {
    height: 450px;
  }
  .about-body-container {
    padding: 20% 15rem 7rem 15rem;
  }
  .border-gradient.vertical {
    height: 32rem;
  }
}
@media screen and (max-width: 1300px) {
  .about-body-container {
    padding: 20% 8rem 7rem 8rem;
  }
  .border-gradient.vertical {
    height: 34rem;
  }
  .about-title-text-container .about-title-text {
    font-size: 3.2rem;
  }
  .about-title-text-container {
    padding-top: 4%;
  }
}
@media screen and (max-width: 1100px) {
  .about-body-container > h6,
  .about-body-container > h4,
  .about-body-container .vision-mision-container > div > p {
    text-align: justify !important;
  }

  .about-body-container {
    padding: 20% 8rem 7rem 8rem;
  }

  .about-title-text-container .about-body-text {
    display: none;
  }

  .vision-mision-container > div > p {
    font-size: 1.4rem !important;
  }

  .about-mision,
  .about-vision {
    max-width: 8rem;
  }

  .border-gradient.vertical {
    height: 35rem;
  }

  .vision-mision-container {
    margin-top: 2rem;
  }

  .border-gradient.horizontal.small {
    display: block;
  }

  .about-values-img {
    display: none;
  }
  .about-values-img.small {
    display: block;
  }
}

@media screen and (max-width: 850px) {
  .about-title-text-container .about-title-text {
    font-size: 2.5rem;
  }

  .about-body-container {
    padding: 20% 5rem 7rem 5rem;
  }

  .about-title-text-container {
    padding-top: 3%;
  }

  .vision-mision-container {
    flex-direction: column;
  }

  .vision-mision-container > div {
    width: 100% !important;
  }

  .vision-mision-container > div > p {
    height: auto !important;
  }

  .border-gradient.vertical {
    display: none;
  }
}
@media screen and (max-width: 650px) {
  .about-title-text-container .about-title-text {
    font-size: 2.5rem;
  }
  .about-title {
    background: url("/assets/about_small_title_bg.png") no-repeat;
    padding-top: 1.5rem;
    height: 120px;
  }
  .about-body-container {
    padding: 25% 2rem 4rem 2rem;
  }
}
@media screen and (max-width: 580px) {
  .about-title-text-container .about-title-text {
    width: 100%;
  }
  .about-title-text-container .about-title-text {
    font-size: 2.2rem;
  }

  .about-body-container {
    padding-top: 35%;
  }
}
@media screen and (max-width: 450px) {
  // .about-title-text-container {
  //   padding: 1.5rem 2rem 2rem 2rem;
  // }
  .about-title-text-container .about-title-text {
    font-size: 2rem;
  }

  .about-body-container {
    padding-top: 40%;
  }
}
@media screen and (max-width: 350px) {
  // .about-title-text-container {
  //   padding-top: 0rem;
  // }
}

